[package]
edition = "2021"
name = "halo2-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = "0.2.0"
plotters = {version = "0.3.0", optional = true}
tabbycat = {version = "0.1", features = ["attributes"], optional = true}

[dev-dependencies]
rand_core = {version = "0.6", default-features = false, features = ["getrandom"]}
